--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon source/index.js -e js,mjs,json,ejs,css",
-    "test": "node source/index.js"
+    "test": "nodemon source/index.js -e js,mjs,json,ejs,css",
+    "start": "node source/index.js"
   },
   "author": "",
   "license": "ISC",
